# rust_async_example

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
