[package]
name = "trytokio"
version = "0.1.0"
authors = ["Hendrik Niemeyer <hendrik.niemeyer@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
rand = "0.7"